infra/gateway/manifests/home-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: home
spec:
  gatewayClassName: cilium
  addresses:
  - type: IPAddress
    value: 192.168.0.240
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.home.lynge.party"
      tls:
        certificateRefs:
          - name: home-tls
      allowedRoutes:
        namespaces:
          from: All
